--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -8,7 +8,9 @@
 <table>
   <% @customer.time_entries.each do |entry| %>
   <tr>
-    <td><%= entry.inspect %></td>
+    <td><%= entry.time %></td>
+    <td><%= link_to entry.employee.name, entry.employee %></td>
+    <td><%= entry.created_at %></td>
   </tr>
   <% end %>
 </table>
