use total_hours model method to customer show view

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @customer.name %></h2>
 
-<p>Total Time</p><p><%= @customer.time_entries.sum(:time) %></p>
+<p>Total Time</p><p><%= @customer.total_hours %></p>
 <p>Total Cost</p><p><%= (@customer.time_entries.map &:cost).sum %></p>
 
 <p><%= @customer.inspect %></p>
